# tools

./: CNAME  ENHANCEMENT_ROADMAP.md  README.md  index.html  security-projects-overview.md  styles.css
Security_Workflow/: workflow.html
advanced-network-recon/: README.md  main.py
aes-tool/: index.html
ai-anomaly-soc/: README.md  main.py
anomaly-detection/: README.md  anomaly_detector.py  index.html  requirements.txt
campp/: app.py  app2.py  run.sh
cipher-tools/: index.html
cloud-misconfig-scanner/: README.md  main.py
cloud-scanner/: README.md  cis_benchmarks.json  cloud_scanner.py  index.html
cookie-analyzer/: index.html
csp-analyzer/: index.html
cyber-defense-sim/: README.md  defense_sim.py  index.html
deception-active-defense/: main.py  requirements.txt
deception-defense/: README.md  deception_system.py  index.html  requirements.txt
dfir-toolkit/: README.md  dfir.py  index.html  ir_playbook.md  main.py  requirements.txt
encoder-decoder/: index.html
enterprise-cyber-defense-sim/: README.md  main.py
file-sharing-server/: .gitignore  BUILD.md  CONTRIBUTING.md  EXPLANATION.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build_linux.sh  build_windows.bat  exp.md  fileserver.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
file-sharing-server/file_sharing_server/: __init__.py  __main__.py  auth.py  file_manager.py  https_support.py  logger.py  main.py  password_auth.py  rate_limiter.py  server.py  utils.py
file-sharing-server/ui/: index.html
filepursuit/: .gitignore  DORKING_TRANSFORMATION.md  QUICKSTART.md  README.md  requirements.txt  setup.py
ghost-app/: app.py
hash-generator/: index.html
hids/: README.md  hids_agent.py  index.html  requirements.txt  rules.json
jsintelliHawk/: index.html
jwt-analyzer/: index.html
malware-analysis/: README.md  analyzer.py  index.html
malware-behavior-analysis/: README.md
metadata-inspector/: index.html
network-recon/: README.md  index.html  scanner.py  (+1 more)
(+90 files in other folders)
